--- a/testing.html
+++ b/testing.html
@@ -29,10 +29,10 @@
                         Uzumaki
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Our Mission</a></li>
+                      <li><a class="dropdown-item" href="#">Our People</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Our Journey</a></li>
                     </ul>
                   </li>
 
