--- a/testing.html
+++ b/testing.html
@@ -40,7 +40,7 @@
                 </ul>
                 <div class="d-flex nav-bar-button">
                     <a class="px-3" href="">
-                        Start free or get a demo
+                        Get to know About Us
                     </a>
                 </div>
               </div>
@@ -71,7 +71,7 @@
                 <div class="text">
                     <h2 style="font-weight: 700; color: #33475b;">Our Mission</h2>
                     <p>
-                  There's this notion that to grow a business, you have to be ruthless. But we know there's a better way to grow. One where what's good for the bottom line is also good for customers. We believe businesses can grow with a conscience, and succeed with a soul — and that they can do it with inbound. That's why we've created an ecosystem uniting software, education, and community to help businesses grow better every day.
+                        Creativity, influence, and modernity are what we are aiming for to bring together everything you need for a stylish wardrobe in the 21st century. Uzumaki is a website that brings together all the brands and businesses, which help you express yourself through fashion, and you are who you are.
                     </p>
                 </div>
                 <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/about_2019/BrianAndDharmesh-photo.png" alt="">
@@ -88,13 +88,13 @@
             <div class="content">
                 <div class="text">
                     <p>
-                        As fellow graduate students at MIT in 2004, Brian and Dharmesh noticed a shift in the way people shop and buy. Consumers were no longer tolerating interruptive bids for their attention — in fact, they'd gotten really, really good at ignoring them. 
+                        In the fashion industry, branding is one of the most important fashion goals.  
                     </p>
                     <p>
-                        From this shift, a company was born: HubSpot. It was founded on "inbound", the notion that people don't want to be interrupted by marketers or harassed by salespeople — they want to be helped. 
+                        Consumers typically find themselves paying more for products from one clothing line than for similar products of the same quality from a different clothing line 
                     </p>
                     <p>
-                        Today, the inbound movement continues to empower businesses around the world to stop interrupting, start helping, and return their focus to the customer. 
+                        , simply because they recognize one brand over the other.. 
                     </p>
                 </div>
 
